[package]
name = "realworld-application"
version = "0.1.0"
authors = ["Enrico Risa <enrico.risa@gmail.com>"]
edition = "2021"

[[bin]]
name = "realworld_application"
path = "src/main.rs"

[dependencies]
axum = "0.5"
serde = { version= "1", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
config = "0.9.3"
db = { package = "realworld-db", path = "../db" }
domain = { package = "realworld-domain", path = "../domain" }
web2 = { package = "realworld-web", path = "../web" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx-cli = "0.5.13"
clap = { version = "3.1.0", features = ["derive", "env"] }

[dependencies.futures]
features = ["compat"]
version = "0.3.1"
