[package]
name = "realworld-db"
version = "0.1.0"
edition = "2021"


[dependencies]
realworld-domain = { package = "realworld-domain", path = "../domain" }
async-trait = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4.6", features = ["serde"] }
tracing = "0.1"
anyhow = "1.0.26"
sqlx = {version= "0.5.13", features = ["any"]}
serde_json = "1"
serde = { version= "1", features = ["derive"] }

[dependencies.sea-orm]
version = "^0.7.0"
features = [
  "macros",
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-postgres",
]


[dev-dependencies]
fake = "1.2.2"
tokio = { version = "1.0", features = ["full"] }
realworld-tests = { package = "realworld-tests", path = "../tests" }
futures= "0.3"
