[package]
name = "realworld-web"
version = "0.1.0"
authors = ["Enrico Risa <enrico.risa@gmail.com>"]
edition = "2021"

[lib]
name = "realworld_web"
path = "src/lib.rs"

[dependencies]
thiserror="1.0"
async-trait = "0.1"
axum = "0.5"
serde = { version= "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.6", features = ["serde"] }
jsonwebtoken = "5.0.1"
tracing = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
itertools = "0.8.2"
domain = { package = "realworld-domain", path = "../domain" }
tower-http =  { version=  "0.2.5" , features = ["trace", "cors"]}
futures= "0.3"


[dev-dependencies]
application = { package = "realworld-application", path = "../application"}
realworld-db = {  path = "../db" }
fake = "1.2.2"
futures-executor = { version = "0.3.1", features = ["thread-pool"] }
serde_qs = "0.5.2"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies.sea-orm]
version = "^0.7.0"
features = [
  "macros",
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-postgres",
]
